[tool.poetry]
name = "bresenham-algorithms"
version = "0.1.0"
description = "A comprehensive Python library offering complete implementations of Bresenham's algorithms for line, circle, and ellipse rasterization, along with powerful visualization tools for enhanced understanding and demonstration."
authors = ["Sandaruwan Wijerathne <sandaruwanwijerathne9495@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
